Fix font size on mobile

--- a/public/support/home.css
+++ b/public/support/home.css
@@ -58,12 +58,31 @@ end of styles copied form perseus
     margin-right: auto;
 }
 
+h1 {
+  font-size: 3.6em;
+}
+h2 {
+  font-size: 2.5em;
+  margin: 0;
+  color: #0d9600;
+}
+h3 {
+  font-size: 1.2em;
+  margin: 0;
+}
+h1 small {
+  font-size: 60%;
+}
+
 @media (max-width: 850px) {
     .homepage-disappear-mobile {
         display:none
     }
     .homepage-headline {
         font-size: 40px
+    }
+    h2 {
+        font-size: 35px
     }
     .homepage-center-mobile {
         text-align: center;
@@ -219,21 +238,6 @@ body {
 }
 #body {
   padding: 1em;
-}
-h1 {
-  font-size: 3.6em;
-}
-h2 {
-  font-size: 2.5em;
-  margin: 0;
-  color: #0d9600;
-}
-h3 {
-  font-size: 1.2em;
-  margin: 0;
-}
-h1 small {
-  font-size: 60%;
 }
 p {
   font-size: 18px;
